k8s/base/ingress/ingress-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supplementhub-ingress-keycloak
spec:
  ingressClassName: nginx
  rules:
    - host: supplementhub.local
      http:
        paths:
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
