k8s/base/ingress/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supplementhub-ingress-prometheus
spec:
  ingressClassName: nginx
  rules:
    - host: supplementhub.local
      http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
